Fix list description on mobile

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
 	}
 	#list-subtitle {
 		font-size: 20px;
-		margin: 10px 0;
+		margin: 10px auto;
 	}
 	#list-levels {
 		margin: 20px 0;
